Updated Quote section and fixed flex wrap

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 100vh;
     margin: 0;
+    flex: 1;
     display: flex;
     flex-direction: column;
     /* text-align: center; */
@@ -45,6 +46,7 @@ color palette
 .container-hero {
     width: auto;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap:12px;
     /* margin-left: 50px; */
@@ -52,6 +54,7 @@ color palette
 
 .footer {
     display: flex;
+    color: white;
     background-color: #37466D;
     justify-content: center;
     align-items: center;
@@ -59,8 +62,9 @@ color palette
 }
 
 .main-info {
-    width: 500px;
+    /* width: 500px; */
     /* flex: 1; */ 
+    max-width: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -88,18 +92,26 @@ color palette
 
 .box-one-cards-container {
     display: flex;
+    flex-wrap: wrap;
     gap: 50px;
     /* background-color: #FFDA80; */
 }
 
 .container-cards {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     flex-direction: column;
     /* gap: 50px; */
 }
 
-
+.card-subtext {
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 14px;
+    max-width: 200px;
+}
 
 .box-two {
     background-color: #E5E7EB;
@@ -113,9 +125,10 @@ color palette
 }
 
 .container-quote {
-    width: 1000px;
+    /* width: 1000px; */
     display: flex;
     flex-wrap: wrap;
+    max-width: 900px;
     /* justify-content: center; */
     /* align-items: center; */
     /* flex-direction: column; */
@@ -130,11 +143,47 @@ color palette
 
 .quote-name {
     /* display: flex; */
-    background-color: aquamarine;
+    flex: 1;
+    text-align: right;
+    padding-right: 68px;
 }
 
 .box-three {
     background-color: white;
+    display: flex;
+    padding: 60px;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 32px;
+}
+
+.modal {
+    flex-wrap: wrap;
+    display: flex;
+    color: white;
+    background-color: #3882f6;
+    /* width: 1000px; */
+    border-radius: 10px;
+    padding: 32px 50px 32px 50px;
+    gap: 100px;
+    justify-content: space-between;
+    
+}
+
+.modal-header {
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+}
+
+.modal-subtext {
+    /* display: flex; */
+    /* flex-direction: column; */
+}
+
+.modal-left-col {
+    display: flex;
+    flex-direction: column;
 }
 
 button {
@@ -143,6 +192,17 @@ button {
     border: none;
     border-radius: 8px;
     background-color: #FFDA80;
+    padding: 10px;
+    font-weight: 600;
+    align-self: baseline;
+}
+
+.modal-button {
+    color: white;
+    font-family: Roboto, sans-serif;
+    border: 2px solid white;
+    border-radius: 8px;
+    background-color: transparent;
     padding: 10px;
     font-weight: 600;
     align-self: baseline;
